Added tabular output of master report. Added table output for scanned items. Removed some extra console output that just slows us down. Added explicit transcoding in to convert from ISO-8859-1 in varer.dat to UTF-8 at the ScanTool class level. That's all for now.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<% #encoding: utf-8 %>
 <!DOCTYPE html>
 <html>
 <title><%= full_title(yield(:title)) %></title>
@@ -7,9 +8,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-<%= debug(params) if Rails.env.development? %>
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-9">
+			<%= yield %>
+			<%= debug(params) if Rails.env.development? %>
+		</div>
+	</div>
+</div>
 </body>
 </html>
